minitermek components  + app.css-bol ki termekcsst

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   gap: 15px;
   justify-content: center;
 }
-
+/*
 .mini-termek{
   cursor: pointer;
   border: 2px solid transparent;
@@ -23,3 +23,4 @@
 .mini-termek:hover{
   border-color: brown;
 }
+*/
